# arx-rand

./: .clang-format  .gitignore  CMakeLists.txt  conanfile.txt  make.bat
src/: ARX.ASM  hexcodec.h  main.cpp  make.bat
src/KRIPT/: INIT.ASM  KRIPT.ASM
